fix: adjust exec member card margins on mobile

--- a/components/about/ExecBoard/styles.module.scss
+++ b/components/about/ExecBoard/styles.module.scss
@@ -21,6 +21,7 @@
     flex-direction: column;
     align-items: center;
     font-size: 16px;
+    padding: 0;
 
     &:hover > img {
       transform: scale(1.1);
